2012-07-10  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tdbcpostgres.c: Fixed a non-static table argument to
			          Tcl_GetIndexFromObjStruct.

2012-06-10  Jan Nijtmans  <jan.nijtmans@gmail.com>

	* configure.in:	Commit log claims this entry is to make TDBC
			API functions MODULE_SCOPE: actual effect appears
			intentionally to disable buildability against Tcl 8.5
			and the TclOO extension.
	* configure:	autoconf-2.59

2012-06-08  Jan Nijtmans  <jan.nijtmans@gmail.com>

	* tclconfig/ChangeLog:
	* tclconfig/tcl.m4:	Update to latest TEA
	* configure:		autoconf-2.59



2011-07-19  Kevin B. Kenny  <kennykb@acm.org>

	* configure.in:
	* Makefile.in:
	* README:	Advanced version number to 1.0b17.

	* configure: 	autoconf 2.59

2011-07-18  Don Porter  <dgp@users.sourceforge.net>

	* configure.in: Update to latest TEA 3.9 revisions.
	* Makefile.in:
	* tclconfig/*:

	* configure:    autoconf-2.59

2011-04-12  Kevin B. Kenny  <kennybk@acm.org>

	* generic/pqStubDefs.txt:
		Added stubs for PQdescribePrepared, PQnparams and PQparamtype,
		needed for correct parameter specification of prepared
		statements.
	* generic/pqStubInit.c:
	* generic/pgStubs.h:
		make genstubs
	* generic/tdbcpostgres.c (PrepareStatement, StatementConstructor):
		Changed statement preparation to *not* specify unknown
		data types but to let the PostgreSQL server try to deduce
		them all. Added code to report the deduced parameter types
		back to the script in the 'params' method. Added code to
		the statement constructor to accept PostgreSQL type cast
		syntax as a way to make prepared statements work when they
		otherwise would give 'could not determine data type' errors.
	* tests/tdbcpostgres.test (tdbc::postgres-18.[45]):
		Added test cases for correct reporting of deduced parameter
		types and for PostgreSQL 

2011-02-20  Kevin B. Kenny  <kennykb@acm.org>

	* generic/pqStubInit.c:
		Revised code to look for libpq.so by SONAME as well
		as directly, so that ABI version number is taken into